syntax = "proto3";
option csharp_namespace = "CatalogService.Grpc";

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message GetProductRequest {
  int32 id = 1;
}

service ProductService {
  rpc GetProduct (GetProductRequest) returns (Product);
}
